added main sidebar, fix icon list responsive, fix header size in mobile

--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -84,6 +84,10 @@
 .b2{
     font-family: "Titillium Web", sans-serif ;
 }
+.b2.strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+}
 .t1-strong{
   font-family: "Titillium Web", sans-serif ;
   font-weight: 700;
