--- a/src/component/OrSubHeader/OrSubHeader.scss
+++ b/src/component/OrSubHeader/OrSubHeader.scss
@@ -7,6 +7,7 @@
     background-color: $neutral-bg-1-default;
     border-bottom: 1px solid $neutral-border-7-default;
     padding: $space2 $space6;
-
+    box-sizing: border-box;
+    width: 100%;
 
 }
