--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -3,18 +3,20 @@
 .icon-body{
     padding: $space8;
     display: flex;
+    max-width: 1400px;
+    width: 100%;
 
 }
 .icon-list{
     display: grid;
-    grid-template-columns: repeat(7, 2fr);
+    grid-template-columns: repeat(8, 2fr);
     width: 100%;
 
     @media screen and (max-width: 1200px){
         grid-template-columns: repeat(5, 1fr);
     }
 
-    @media screen and (max-width: 768px){
+    @media screen and (max-width: 920px){
         grid-template-columns: repeat(4, 1fr);
     }
 
