--- a/src/component/OrButton/OrButton.scss
+++ b/src/component/OrButton/OrButton.scss
@@ -104,6 +104,7 @@
     }
     
     &.outline{
+        color: $neutral-fg-1-default;
         background-color: $neutral-bg-subtle-bold-1-default;
         border: 1px solid $neutral-border-1-default;
 
