--- a/src/component/OrSidebar/OrSidebar.scss
+++ b/src/component/OrSidebar/OrSidebar.scss
@@ -17,6 +17,9 @@
         overflow:hidden;
         margin: 0;
         box-sizing: border-box;
+        position: sticky;
+        top: 0; 
+      
 
         @media screen and (max-width: 600px){
             display: none;
