added tab switch, added ShapeIcon StrokeIcon

--- a/src/component/StrokeIcon/StrokeIcon.scss
+++ b/src/component/StrokeIcon/StrokeIcon.scss
@@ -1,6 +1,6 @@
 @import '../../base/style.scss';
 
-.icon-body{
+.icon-stroke-body{
     padding: $space8;
     display: flex;
     max-width: 1400px;
