--- a/src/component/ShapeIcon/ShapeIcon.scss
+++ b/src/component/ShapeIcon/ShapeIcon.scss
@@ -10,7 +10,7 @@
 }
 .icon-list{
     display: grid;
-    grid-template-columns: repeat(8, 2fr);
+    grid-template-columns: repeat(8, 1fr);
     width: 100%;
 
     @media screen and (max-width: 1200px){
@@ -30,31 +30,64 @@
 .item{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 4px;
+    padding: 12px;
+    background-color: $neutral-bg-1-default;
+    border-radius: $radius3;
+    cursor: pointer;
+    gap: 8px;
 
-    a {
-
-        text-align: center;
-        vertical-align: middle;
-        background-color: white ;
-        border: $neutral-border-10-default 1px solid;
-        border-radius: 16px;
-        margin: 4px;
-        padding: 24px;
-        height: 80px;
-        cursor: pointer;
-        color: $neutral-fg-4-default;
-        text-decoration: none;
-        
-        
-        &:hover{
-            border: $neutral-border-10-default 1px solid;
-            background-color: $neutral-bg-1-hover;
-        }
-        
-      }
+    &:hover{
+        background-color: $neutral-bg-1-hover;    
+    }
+    &:active{
+        background-color: $neutral-bg-2-press;
+    }
+    
 }
 .icon-view{
-   
+    
     width: 40px;
     height: 40px;
 }
+.svg-shape-icon svg {
+    path{
+        fill: $neutral-fg-1-default;
+        
+    }
+
+    width: 40px;
+    height: 40px;
+    transition: width 0.2s, height 0.2s;
+
+    &:hover{
+        width: 48px;
+        height: 48px;
+        transition: width 0.2s, height 0.2s;
+    }
+  }
+
+.icon-wrapper{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.skelton{
+    animation: skeleton-loading 1s linear infinite alternate;
+    height: 80px;
+    width: 100%;
+    border-radius: 8px;
+}
+@keyframes skeleton-loading {
+    0% {
+      background-color: hsl(0, 0%, 96%);
+    }
+    100% {
+      background-color: hsl(0, 0%, 91%);
+    }
+  }
+
