--- a/src/component/StrokeIcon/StrokeIcon.scss
+++ b/src/component/StrokeIcon/StrokeIcon.scss
@@ -58,3 +58,34 @@
     width: 40px;
     height: 40px;
 }
+
+.loading
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-width: 100%;
+    height: 220px;
+}
+.svg-color{
+    fill: red;
+    svg{
+
+        stroke: red;
+        stroke-width: 3;
+
+    }
+
+    
+}
+.svg-container svg {
+    path{
+        stroke: blue; 
+        stroke-width: 1px; 
+    }
+    stroke: blue; 
+
+    width: 40px;
+    height: 40px;
+  }
+  
