fixed fill/outline switch

--- a/src/component/ShapeIcon/ShapeIcon.scss
+++ b/src/component/ShapeIcon/ShapeIcon.scss
@@ -53,7 +53,7 @@
 }
 .svg-shape-icon svg {
     path{
-        fill: $neutral-fg-1-default;
+        // fill: $neutral-fg-1-default;
         
     }
 
