--- a/src/component/OrCheckboxFilter/OrCheckboxFilter.scss
+++ b/src/component/OrCheckboxFilter/OrCheckboxFilter.scss
@@ -23,6 +23,7 @@
 .category-list-title-box
 {   
     display: flex;
+    flex: 1 1 auto;
     width: 100%;
     justify-content: space-between;
     align-items: center;
