--- a/src/component/OrFilter/OrFilter.scss
+++ b/src/component/OrFilter/OrFilter.scss
@@ -7,10 +7,8 @@
     z-index: 999;
     position: sticky;
     top: 0;
-    border-right: 1px solid $neutral-border-7-default;
     transition: background-color 0.3s ease-in-out;
-    height: 100vh;
-    overflow: hidden;
+    
 
 
     @media screen and (max-width: 768px){
@@ -24,24 +22,15 @@
     }
    
 }
-.filter-body{
-    height: 100vh;
-    
-}
 
-.customize-section{
+.filter-body{
     z-index: 2;
     background: $neutral-bg-1-default;
-   
+    border-right: 1px solid $neutral-border-7-default;
+    height: 100vh;
     position: sticky;
     top: 0;
     overflow-y: auto;
-    padding: 24px;
-    gap: 24px;
-   
-    display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid $neutral-border-7-default;
     }
 
 .filter-header{
@@ -63,20 +52,19 @@
     }
 }
 
-.tab-body{
+.customize-section{
+    padding: $space6;
+    border-bottom: solid 1px $neutral-border-7-default;
     display: flex;
     flex-direction: column;
-    gap: $space4;
+    gap: $space6;
 
 
 }
 
 .category-section{
     padding: $space6;
-    display: flex;
-    flex-direction: column;
-    gap: $space2;
-    
+    overflow-y: auto;
     
 }
 
@@ -93,12 +81,4 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
     }
-}
-
-.OrCheckboxFilter-body{
-    overflow: auto;
-    box-sizing: border-box;
-    height: 100%;
-
-    
 }
