--- a/src/component/OrTab/OrTab.scss
+++ b/src/component/OrTab/OrTab.scss
@@ -1,17 +1,9 @@
-@import '../../base/style.scss';
-@import '../../base/type-style.scss';
-
-
 .or-tab {
   display: flex;
   justify-content: space-around;
 
   &.segment-control {
-   background-color: $neutral-bg-3-default;
-   border-radius: $radius2;
-   padding: $space1;
-   display: flex;
-   gap: $space1;
+  
   }
 
   &.tabs {
@@ -20,23 +12,21 @@
 }
 
 .tab-button {
-  padding: $space1;
+  padding: 10px 20px;
   border: none;
-  background-color: $neutral-bg-3-default;
+  background-color: #f0f0f0;
   cursor: pointer;
   font-size: 16px;
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  width: 100%;
 
   &.active {
-    background-color: $neutral-bg-1-default;
-    color: $brand-fg-1-default;
-    cursor: auto;
+    background-color: #007bff;
+    color: white;
   }
 
   &:hover {
-    background-color: $neutral-bg-1-hover;
+    background-color: #d0d0d0;
   }
 
   .tabs & {
