--- a/src/component/OrFilter/OrFilter.scss
+++ b/src/component/OrFilter/OrFilter.scss
@@ -7,8 +7,10 @@
     z-index: 999;
     position: sticky;
     top: 0;
+    border-right: 1px solid $neutral-border-7-default;
     transition: background-color 0.3s ease-in-out;
-    
+    height: 100vh;
+    overflow: hidden;
 
 
     @media screen and (max-width: 768px){
@@ -22,15 +24,24 @@
     }
    
 }
-
 .filter-body{
+    height: 100vh;
+    
+}
+
+.customize-section{
     z-index: 2;
     background: $neutral-bg-1-default;
-    border-right: 1px solid $neutral-border-7-default;
-    height: 100vh;
+   
     position: sticky;
     top: 0;
     overflow-y: auto;
+    padding: 24px;
+    gap: 24px;
+   
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid $neutral-border-7-default;
     }
 
 .filter-header{
@@ -52,19 +63,20 @@
     }
 }
 
-.customize-section{
-    padding: $space6;
-    border-bottom: solid 1px $neutral-border-7-default;
+.tab-body{
     display: flex;
     flex-direction: column;
-    gap: $space6;
+    gap: $space4;
 
 
 }
 
 .category-section{
     padding: $space6;
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: $space2;
+    
     
 }
 
@@ -81,4 +93,12 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
     }
+}
+
+.OrCheckboxFilter-body{
+    overflow: auto;
+    box-sizing: border-box;
+    height: 100%;
+
+    
 }
