--- a/src/component/OrTab/OrTab.scss
+++ b/src/component/OrTab/OrTab.scss
@@ -1,9 +1,17 @@
+@import '../../base/style.scss';
+@import '../../base/type-style.scss';
+
+
 .or-tab {
   display: flex;
   justify-content: space-around;
 
   &.segment-control {
-  
+   background-color: $neutral-bg-3-default;
+   border-radius: $radius2;
+   padding: $space1;
+   display: flex;
+   gap: $space1;
   }
 
   &.tabs {
@@ -12,21 +20,23 @@
 }
 
 .tab-button {
-  padding: 10px 20px;
+  padding: $space1;
   border: none;
-  background-color: #f0f0f0;
+  background-color: $neutral-bg-3-default;
   cursor: pointer;
   font-size: 16px;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  width: 100%;
 
   &.active {
-    background-color: #007bff;
-    color: white;
+    background-color: $neutral-bg-1-default;
+    color: $brand-fg-1-default;
+    cursor: auto;
   }
 
   &:hover {
-    background-color: #d0d0d0;
+    background-color: $neutral-bg-1-hover;
   }
 
   .tabs & {
