--- a/src/component/ShapeIcon/ShapeIcon.scss
+++ b/src/component/ShapeIcon/ShapeIcon.scss
@@ -37,6 +37,19 @@
     border-radius: $radius3;
     cursor: pointer;
     gap: 8px;
+    transition: background-color 0.3s; 
+
+    svg{
+        width: 40px;
+        height: 40px;
+        transition: width 0.2s, height 0.2s; 
+
+        @media screen and (max-width: 480px){
+            width: 32px;
+            height: 32px;
+    
+        }
+    }
 
     &:hover{
         background-color: $neutral-bg-1-hover;   
@@ -44,6 +57,12 @@
             width: 48px;
             height: 48px;
             transition: width 0.2s, height 0.2s; 
+
+            @media screen and (max-width: 480px){
+                width: 32px;
+                height: 32px;
+        
+            }
         } 
     }
     &:active{
@@ -56,24 +75,7 @@
     width: 40px;
     height: 40px;
 }
-.svg-shape-icon svg {
-    path{
 
-        // fill: $neutral-fg-1-default;
-
-        
-    }
-
-    width: 40px;
-    height: 40px;
-    transition: width 0.2s, height 0.2s;
-
-    &:hover{
-        width: 48px;
-        height: 48px;
-        transition: width 0.2s, height 0.2s;
-    }
-  }
 
 .icon-wrapper{
     width: 100%;
@@ -89,7 +91,7 @@
     width: 100%;
     border-radius: 8px;
 }
-@keyframes skeleton-loading {
+@keyframes skeleton-loading { 
     0% {
       background-color: hsl(0, 0%, 96%);
     }
