--- a/src/component/StrokeIcon/StrokeIcon.scss
+++ b/src/component/StrokeIcon/StrokeIcon.scss
@@ -67,21 +67,16 @@
     min-width: 100%;
     height: 220px;
 }
-.svg-color{
-    fill: red;
-    svg{
 
-        stroke: red;
-        stroke-width: 3;
-
-    }
-
-    
-}
 .svg-container svg {
-
 
     width: 40px;
     height: 40px;
+
+    @media screen and (max-width: 480px){
+        width: 32px;
+    height: 32px;
+
+    }
   }
   
