--- a/src/component/OrButton/OrButton.scss
+++ b/src/component/OrButton/OrButton.scss
@@ -2,14 +2,21 @@
 
 .button 
 {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: $space2;
     border-radius: $radius1;
     transition: background-color 0.3s ease-in-out;
     cursor: pointer;
     height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.div-button{
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: $space2;
 
     span{
         width: 20px;
@@ -20,7 +27,6 @@
         height: 100%;
         }
     }
-
 }
 
 .primary{
@@ -106,21 +112,21 @@
     &.outline{
         color: $neutral-fg-1-default;
         background-color: $neutral-bg-subtle-bold-1-default;
-        border: 1px solid $neutral-border-1-default;
+        border: 1px solid $neutral-border-6-default  ;
 
         &:hover{
             background-color: $neutral-bg-subtle-bold-1-hover;
-            border-color: $neutral-border-1-hover;
+            border-color: 1px solid $neutral-border-6-hover;
         }
 
         &.press{
             background-color: $neutral-bg-subtle-bold-1-press;
-            border-color: $neutral-border-1-press;
+            border-color: 1px solid $neutral-border-6-press;
         }
 
         &.disable{
             background-color: $neutral-bg-subtle-bold-1-disable;
-            border-color: $neutral-border-1-disable;
+            border-color: 1px solid $neutral-border-6-disable;
         }
     }
     
@@ -146,36 +152,68 @@
 
 .xs{
     height: 24px;
-    padding-left: $space2;
-    padding-right: $space2;
-    padding-top: $space1;
-    padding-bottom: $space1;
+    
+    &.icon{
+        padding: $space2 $space2;
+    }
+    &.text{
+        padding: $space1 $space2;
+    }
+    &.icon+text{
+        padding: $space2 $space1 $space1 $space1;
+    }
+
+    
 }
 
 .sm{
     height: 32px;
-    padding-left: $space2;
-    padding-right: $space2;
-    padding-top: $space1;
-    padding-bottom: $space1;
+    div{
+        padding: $space0-5;
+    }
 
+    &.icon{
+        padding: $space2 $space2;
+    }
+    &.text{
+        padding: $space2 $space1;
+    }
+    &.icon+text{
+        padding: $space2 $space1 $space1 $space1;
+    }
 } 
 
 .md{
     height: 40px;
-    padding-left: $space4;
-    padding-right: $space4;
-    padding-top: $space2;
-    padding-bottom: $space2;
+
+    div{
+        padding: $space0-5;
+    }
+
+    &.icon{
+        padding: $space2 $space2;
+    }
+    &.text{
+        padding: $space2 $space1;
+    }
+    &.icon-text{
+        padding: $space2 $space4 $space2 $space2;
+    }
 
 }
 
 .lg{
     height: 52px;
-    padding-left: $space6;
-    padding-right: $space6;
-    padding-top: $space4;
-    padding-bottom: $space4;
+   
+    &.icon{
+        padding: $space2 $space2;
+    }
+    &.text{
+        padding: $space4 $space6 ;
+    }
+    &.icon+text{
+        padding: $space2 $space1 $space1 $space1;
+    }
 }
 
 .xl{
