--- a/src/component/OrNavigationbar/OrNavigationbar.scss
+++ b/src/component/OrNavigationbar/OrNavigationbar.scss
@@ -5,8 +5,7 @@
 
         
         width: 100%;
-        position: absolute;
-       
+        position: fixed;
         justify-content: center;
         align-items: center;
         background-color: $neutral-bg-1-default;
@@ -37,7 +36,9 @@
     align-items: center;
     gap: $space0-5;
     cursor: pointer;
-
+    color: $neutral-fg-1-default;
+   
+       
         div{
             &.icon-wrapper{
                 display: flex;
@@ -48,6 +49,7 @@
                 align-items: center;
                 border-radius: $radius3 ;
                 transition: width 0.1s ease-in-out, background-color 0.2s ease-in-out;
+                color: red;
             }
         }
 
