change mobile layout ShapeIcon

--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -84,7 +84,7 @@
 .b2{
     font-family: "Titillium Web", sans-serif ;
 }
-.b2.strong{
+.b2-strong{
   font-family: "Titillium Web", sans-serif ;
   font-weight: 700;
 }
