--- a/src/component/OrHeader/OrHeader.scss
+++ b/src/component/OrHeader/OrHeader.scss
@@ -37,7 +37,7 @@
     }
 
     @media screen and (max-width: 1200px){
-    padding: $space2 $space4;
+    padding: $space2 $space4 $space0 $space2;
     height: auto ;
     border-bottom: none;
     }
