--- a/src/component/OrSubHeader/OrSubHeader.scss
+++ b/src/component/OrSubHeader/OrSubHeader.scss
@@ -12,6 +12,8 @@
 
     @media screen and (max-width: 1200px){
         padding: $space2 $space4;
+        position: sticky;
+       top: 113px;
     }
 
 }
