--- a/src/component/OrCheckboxFilter/OrCheckboxFilter.scss
+++ b/src/component/OrCheckboxFilter/OrCheckboxFilter.scss
@@ -7,6 +7,7 @@
     cursor: pointer;
     height: 0;
     width: 0;
+    
     }
 
 .category-section {
@@ -42,6 +43,9 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    display: flex;
+    align-items: center;
+
 }
 .container input ~ .checkmark{
     background-color: $neutral-bg-1-default;
@@ -51,6 +55,8 @@
     pointer-events: fill;
     cursor: pointer;
 
+    
+
 }
 
 .container input:hover ~ .checkmark {
@@ -59,8 +65,24 @@
 
 
 .container input:checked ~ .checkmark {
-   outline: solid 2px $brand-border-1-default;
+    background-color: $brand-bg-subtle-1-select;
+//    outline: solid 2px $brand-border-1-default;
+
 }
+.plus{
+    display: auto;
+}
+.container input:checked ~ .plus {
+display: none;
+}
+
+.minus{
+    display: none;
+}
+.container input:checked ~ .minus {
+display: block;
+}
+
 
 
 
