--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -95,6 +95,13 @@
   font-size: 22px;
 }
 
+.h6{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 40px;
+  font-size: 25px;
+}
+
 .h6-strong{
     font-family: "Titillium Web", sans-serif ;
     font-weight: 700;
@@ -106,5 +113,20 @@
   font-weight: 700;
   line-height: 28px;
   font-size: 20px;
+}
+
+
+.t1{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 28px;
+  font-size: 22px;
+}
+.t1-strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+  line-height: 28px;
+  font-size: 22px;
+
 }
 }
