--- a/src/component/ShapeIcon/ShapeIcon.scss
+++ b/src/component/ShapeIcon/ShapeIcon.scss
@@ -1,7 +1,7 @@
 @import '../../base/style.scss';
 
 .icon-shape-body{
-    padding: $space8;
+    padding: $space4;
     display: flex;
     max-width: 1400px;
     width: 100%;
@@ -28,7 +28,8 @@
 
     @media screen and (max-width: 480px){
         grid-template-columns: repeat(4, 1fr);
-        margin-bottom: 64px;
+        padding: $space2;
+        margin-bottom: 80px;
 
     }
 }
@@ -113,4 +114,6 @@
 
 .icon-name{
     text-align: center;
+    color: $neutral-fg-4-default;
+
 }
