--- a/src/component/StrokeIcon/StrokeIcon.scss
+++ b/src/component/StrokeIcon/StrokeIcon.scss
@@ -1,17 +1,22 @@
 @import '../../base/style.scss';
 
 .icon-stroke-body{
-    padding: $space6;
+    padding: $space4;
     display: flex;
     max-width: 1400px;
     width: 100%;
     box-sizing: border-box;
+    @media screen and (max-width: 480px){
+        padding: $space2;
+        }
 
 }
 .icon-list{
     display: grid;
     grid-template-columns: repeat(8, 2fr);
     width: 100%;
+    overflow: hidden;
+
 
     @media screen and (max-width: 1200px){
         grid-template-columns: repeat(5, 1fr);
@@ -22,9 +27,9 @@
     }
 
     @media screen and (max-width: 480px){
-        grid-template-columns: repeat(3, 1fr);
-        padding: 8px;
-        margin-bottom: 64px;
+        grid-template-columns: repeat(4, 1fr);
+        padding: $space2;
+        margin-bottom: 80px;
 
     }
 }
@@ -32,33 +37,66 @@
 .item{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 4px;
+    padding: 12px;
+    background-color: $neutral-bg-1-default;
+    border-radius: $radius3;
+    cursor: pointer;
+    gap: 8px;
+    transition: background-color 0.3s; 
 
-    a {
+    @media screen and (max-width: 480px){
+        padding: $space1;
 
-        text-align: center;
-        vertical-align: middle;
-        background-color: white ;
-        border: $neutral-border-10-default 1px solid;
-        border-radius: 16px;
-        margin: 4px;
-        padding: 24px;
-        height: 80px;
-        cursor: pointer;
-        color: $neutral-fg-4-default;
-        text-decoration: none;
-        
-        
-        &:hover{
-            border: $neutral-border-10-default 1px solid;
-            background-color: $neutral-bg-1-hover;
+    }
+
+    svg{
+        width: 40px;
+        height: 40px;
+        transition: width 0.2s, height 0.2s; 
+
+        @media screen and (max-width: 480px){
+            width: 32px;
+            height: 32px;
+    
         }
+    }
+
+    // a {
+
+    //     text-align: center;
+    //     vertical-align: middle;
+    //     background-color: white ;
+    //     border: $neutral-border-10-default 1px solid;
+    //     border-radius: 16px;
+    //     margin: 4px;
+    //     padding: 24px;
+    //     height: 80px;
+    //     cursor: pointer;
+    //     color: $neutral-fg-4-default;
+    //     text-decoration: none;
         
-      }
+        
+    //     &:hover{
+    //         border: $neutral-border-10-default 1px solid;
+    //         background-color: $neutral-bg-1-hover;
+    //     }
+        
+    //   }
 }
 .icon-view{
    
     width: 40px;
     height: 40px;
+}
+.icon-wrapper{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .loading
@@ -70,18 +108,33 @@
     height: 220px;
 }
 
-.svg-container svg {
+// .svg-container svg {
 
-    width: 40px;
-    height: 40px;
+//     width: 40px;
+//     height: 40px;
 
-    @media screen and (max-width: 480px){
-        width: 32px;
-    height: 32px;
+//     @media screen and (max-width: 480px){
+//         width: 32px;
+//     height: 32px;
 
-    }
-  }
+//     }
+//   }
   
   .icon-name{
     text-align: center;
 }
+
+.skelton{
+    animation: skeleton-loading 1s linear infinite alternate;
+    height: 80px;
+    width: 100%;
+    border-radius: 8px;
+}
+@keyframes skeleton-loading { 
+    0% {
+      background-color: hsl(0, 0%, 96%);
+    }
+    100% {
+      background-color: hsl(0, 0%, 91%);
+    }
+  }
