--- a/src/component/StrokeIcon/StrokeIcon.scss
+++ b/src/component/StrokeIcon/StrokeIcon.scss
@@ -52,8 +52,8 @@
     }
 
     svg{
-        width: 40px;
-        height: 40px;
+        width: 48px;
+        height: 48px;
         transition: width 0.2s, height 0.2s; 
 
         @media screen and (max-width: 480px){
@@ -137,4 +137,10 @@
     100% {
       background-color: hsl(0, 0%, 91%);
     }
+  }
+
+  .copy-flot-button{
+    position: relative;
+    top: 4px;
+    right: 4px;
   }
