added undo and recent color to color picker

--- a/src/component/OrButton/OrButton.scss
+++ b/src/component/OrButton/OrButton.scss
@@ -155,6 +155,7 @@
     
     &.icon{
         padding: $space2 $space2;
+        width: 24px;
     }
     &.text{
         padding: $space1 $space2;
