--- a/src/component/OrSubHeader/OrSubHeader.scss
+++ b/src/component/OrSubHeader/OrSubHeader.scss
@@ -11,6 +11,7 @@
     width: 100%;
 
     @media screen and (max-width: 1200px){
+        display: none;
         padding: $space2 $space4;
         position: sticky;
        top: 113px;
