--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
 .app-container{
     display: flex;
     flex-direction: row;
+    overflow: hidden;
+    height: 100vh;
 
 
 }
 .main-content{
     width: 100%;
+    overflow: hidden;
 
 }
