--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -1,37 +1,42 @@
 @import '../../base/style.scss';
 
 .icon-body{
-    padding: $space4;
+    padding: $space0;
     display: flex;
-    max-width: 1400px;
     width: 100%;
     box-sizing: border-box;
-    @media screen and (max-width: 480px){
-        padding: $space2;
-        }
+    overflow: hidden;
+    height: 100vh;
 
+    
 }
-.icon-list{
-    display: grid;
-    grid-template-columns: repeat(8, 2fr);
+
+.icon-list-main{
     width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    overflow: auto;
+
+    
+}
+
+.icon-list{
+    max-width: 1600px;
+  
+    height: fit-content;
+    padding: $space2;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 120px);
+    width: 100%;
+    justify-content: space-between;
+    justify-content: center;
+    gap: 16px;
     overflow: hidden;
 
-
-    @media screen and (max-width: 1200px){
-        grid-template-columns: repeat(5, 1fr);
-    }
-
-    @media screen and (max-width: 920px){
-        grid-template-columns: repeat(4, 1fr);
-    }
-
     @media screen and (max-width: 480px){
-        grid-template-columns: repeat(4, 1fr);
-        padding: $space2;
-        margin-bottom: 80px;
-
-    }
+        grid-template-columns: repeat(auto-fill, 80px);
+        }
 }
 
 .icon-view{
@@ -94,9 +99,6 @@
     right: 4px;
   }
 
-  .item.selected {
-    border: 2px solid blue; // رنگ یا استایل دلخواه
-  }
 
   @import '../../base/style.scss';
 
@@ -111,27 +113,6 @@
     padding: $space2;
     }
 
-}
-.shape-icon-list{
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    width: 100%;
-    overflow: hidden;
-
-    @media screen and (max-width: 1200px){
-        grid-template-columns: repeat(5, 1fr);
-    }
-
-    @media screen and (max-width: 920px){
-        grid-template-columns: repeat(4, 1fr);
-    }
-
-    @media screen and (max-width: 480px){
-        grid-template-columns: repeat(4, 1fr);
-        padding: $space2;
-        margin-bottom: 80px;
-
-    }
 }
 
 .item{
@@ -196,7 +177,7 @@
     }
 }
 .item.selected {
-    border: 2px solid blue; // رنگ یا استایل دلخواه
+    outline: 2px solid blue; // رنگ یا استایل دلخواه
   }
 
 .side-panel{
@@ -210,41 +191,105 @@
     top: 0;
     border-left: 1px solid $neutral-border-7-default;
     transition: background-color 0.3s ease-in-out;
-    height: 100vh;
-    overflow: hidden;
+    overflow-y: auto; 
+    overflow-x: hidden;
+    background-color: $neutral-bg-1-default;
+
+    @media screen and (max-width: 780px){
+        position: fixed;
+        top: 0px;
+        height: 100vh;
+        width: 100%;
+        
+     }
+
 }
-.side-panel-body{
+.side-panel-item{
     z-index: 2;
     background: $neutral-bg-1-default;
-
-   
-    position: sticky;
-    top: 0;
-    overflow-y: auto;
-    padding: 24px;
+    
+    padding: 16px 24px;
     gap: 24px;
    
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid $neutral-border-7-default;
 
-    div{
-        display: flex;
-         flex-direction: row; 
-         align-items: center;
-         gap: 16px;
+}
+
+.sidepabel-svg-container{
+    padding: 0px;
+    background-color: $neutral-bg-4-default;
+    border-radius: $radius3;
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+    svg{
+        width: 24px;
+        height: 24px;
+    }
+    
+}
+.side-panel-item-body{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    width: 100%;
+
+    span{
+        flex-grow: 1;
+    }
+}
+
+.side-panel-body{
+
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow-y: auto;
+}
+
+.dowload-button-box{
+    border-top: 1px solid $neutral-border-7-default ;
+    width: 100%;
+    padding: 24px;
+    box-sizing: border-box;
+
+    
+    button{
+        width: 100%;
+    }
+}
+
+.svg-code{
+
+    padding: $space6;
+}
+.svg-code-box{
+    border: 1px solid $neutral-border-7-default;
+    border-radius: $radius2;
+    overflow-y: auto;
+   
+}
+.single-download-box{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    button{
+        width: 100%;
     }
 
 }
 
-.sidepabel-svg-container{
-    padding: 12px;
-    background-color: $neutral-bg-4-default;
-    border-radius: $radius3;
-
-    svg{
-        width: 40px;
-        height: 40px;
-    }
-    
+.side-panel-body-shape{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow: auto;
 }
