--- a/src/component/OrButton/OrButton.scss
+++ b/src/component/OrButton/OrButton.scss
@@ -33,6 +33,17 @@
 
     &.fill{
         background-color: $brand-bg-1-default;
+        border: 0px solid transparent;
+        color: $neutral-fg-10-default;
+        fill: $neutral-fg-10-default;
+       .icon{
+            svg{
+                path{
+                    fill: $neutral-fg-10-default;
+                }
+            }   
+        
+       }
 
         &:hover{
             background-color: $brand-bg-1-hover;
@@ -95,6 +106,14 @@
     &.fill{
         background-color: $neutral-bg-10-default;
         color: $neutral-fg-10-default;
+        .icon{
+            svg{
+                path{
+                    fill: $neutral-fg-10-default;
+                }
+            }   
+        
+       }
 
         &:hover{
             background-color: $neutral-bg-10-hover;
@@ -146,6 +165,81 @@
             background-color: $neutral-bg-subtle-bold-1-disable;
         }
     }
+}
+.error{
+    border: 0px solid transparent;
+    
+    &.fill{
+        background-color: $state-error-bg-1-default;
+        color: $neutral-fg-10-default;
+        .icon{
+            svg{
+                path{
+                    fill: $neutral-fg-10-default;
+                }
+            }   
+        
+       }
+
+        &:hover{
+            background-color: $neutral-bg-10-hover;
+        }
+
+        &.press{
+            background-color: $neutral-bg-10-press;
+        }
+
+        &.disable{
+            background-color: $neutral-bg-10-disable;
+        }
+    }
+    
+    &.outline{
+        color: $state-error-bg-1-default;
+        background-color: $neutral-bg-subtle-bold-1-default;
+        border: 1px solid $state-error-border-1-default  ;
+        .icon{
+            svg{
+                path{
+                    fill: $state-error-fg-1-default;
+                }
+            }   
+        
+       }
+
+        &:hover{
+            background-color: $neutral-bg-subtle-bold-1-hover;
+            border-color: 1px solid $neutral-border-6-hover;
+        }
+
+        &.press{
+            background-color: $neutral-bg-subtle-bold-1-press;
+            border-color: 1px solid $neutral-border-6-press;
+        }
+
+        &.disable{
+            background-color: $neutral-bg-subtle-bold-1-disable;
+            border-color: 1px solid $neutral-border-6-disable;
+        }
+    }
+    
+    &.ghost{
+        background-color: $error-bg-subtle-1-default;
+        color: $neutral-fg-1-default;
+
+        &:hover{
+            background-color: $neutral-bg-subtle-bold-1-hover;
+        }
+
+        &.press{
+            background-color: $neutral-bg-subtle-bold-1-press;
+        }
+
+        &.disable{
+            background-color: $neutral-bg-subtle-bold-1-disable;
+        }
+    }
+
 }
 
 
@@ -212,8 +306,8 @@
     &.text{
         padding: $space4 $space6 ;
     }
-    &.icon+text{
-        padding: $space2 $space1 $space1 $space1;
+    &.icon-text{
+        padding: $space4 $space6 $space4 $space4;
     }
 }
 
