--- a/src/component/OrHeader/OrHeader.scss
+++ b/src/component/OrHeader/OrHeader.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: $space8 ;
+    gap: $space4 ;
     background-color: $neutral-bg-1-default;
     border-bottom: 1px solid $neutral-border-7-default;
     padding-top:$space6;
@@ -29,6 +29,7 @@
         flex-grow: 1;
         align-items: center;
         display: flex;
+        
 
         @media screen and (max-width: 1200px){
             display: none;
@@ -40,6 +41,9 @@
     padding: $space2 $space4 $space0 $space2;
     height: auto ;
     border-bottom: none;
+    height: 64px ;
+    justify-content: center;
+
     }
 }
 
@@ -105,12 +109,26 @@
    
 }
 .logo{
-    padding: $space0 $space4;
-    width: 63px;
-    height: 47px;
+    padding: $space0 $space0;
+    width: 180px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+
     @media screen and (max-width: 1200px){
         width: 56px;
         height: 20px;  
+    }
+
+    span{
+       
+        background-color: $brand-bg-1-default;
+        color: $neutral-fg-10-default;
+        padding: $space0-5 $space1;
+        border-radius: $radius1;
+
+
     }
 
    
