fixed single view in sidepanel

--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -284,6 +284,7 @@
     border: 1px solid $neutral-border-7-default;
     border-radius: $radius2;
     overflow-y: auto;
+    padding: $space2;
    
 }
 .single-download-box{
