--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -69,6 +69,21 @@
 .font{
     
 }     
+
+.c1{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 16px;
+  font-size: 12px;
+} 
+
+.c1-strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+  line-height: 16px;
+  font-size: 12px;
+} 
+
 .b1{
     font-family: "Titillium Web", sans-serif ;
     font-weight: 400;
