--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -31,7 +31,7 @@
     width: 100%;
     justify-content: space-between;
     justify-content: center;
-    gap: 16px;
+    gap: 8px;
     overflow: hidden;
 
     @media screen and (max-width: 480px){
@@ -84,8 +84,10 @@
 //     }
 //   }
   
-  .icon-name{
-    text-align: center;
+  .icon-sidepanel-name{
+    text-align: left;
+    padding: $space4 $space0;
+    
 }
 
 .skelton{
@@ -285,6 +287,7 @@
     border-radius: $radius2;
     overflow-y: auto;
     padding: $space2;
+    background-color: $neutral-bg-3-default;
    
 }
 .single-download-box{
@@ -303,4 +306,24 @@
     flex-direction: column;
     height: 100vh;
     overflow: auto;
+}
+
+.svg-preview{
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $neutral-bg-4-default;
+    border-radius: $radius3;
+
+    svg{
+        width: 64px;
+        height: 64px;
+    }
+}
+
+.icon-name{
+    text-align: center;
+    color: rgb(119, 119, 119);
 }
