--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,8 @@
 
 }
 
+@import './base/style.scss';
+
 .main
 {
     display: flex;
@@ -28,11 +30,30 @@
     }
 }
 
-.main-content{
-    max-width: 1200px;
+
+.main-container{
+   width: 100%;
+    display: flex;
+    justify-content: center; 
+}
+
+.content-container{
+    max-width: 1400px;  
+  
+    height: fit-content;
+    padding: $space6;
     display: flex;
     flex-direction: column;
-    gap: 24px;
-    padding: 24px;
-    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    justify-content: center;
+    gap: 8px;
+    overflow: hidden;
+
+    @media screen and (max-width: 600px){
+        padding: $space4;
+  
+     }
+
+
 }
