--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,14 @@
     overflow: hidden;
     height: 100vh;
 
+    @media screen and (max-width: 780px){
+        flex-direction: column-reverse;
+ 
+     }
 
 }
 .main-content{
     width: 100%;
     overflow: hidden;
+    height: 100vh;
 }
