--- a/src/component/OrNavigationbar/OrNavigationbar.scss
+++ b/src/component/OrNavigationbar/OrNavigationbar.scss
@@ -5,7 +5,7 @@
 
         
         width: 100%;
-        // position: fixed;
+        position: fixed;
         justify-content: center;
         align-items: center;
         background-color: $neutral-bg-1-default;
