--- a/src/style.scss
+++ b/src/style.scss
@@ -9,11 +9,14 @@
     flex-direction: row;
     height: 100vh;
     overflow: hidden;
+
  
 }
 .view{
     width: 100%;
     min-width: 0;
+
+
    
 } 
 
@@ -33,24 +36,35 @@
 .main-container{
    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center; 
+    align-items: center;
+    overflow: hidden;
 }
 
 .content-container{
     max-width: 1400px;  
-  
-    height: fit-content;
+    
+ height: 100vh;
     padding: $space6;
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: space-between;
-    justify-content: center;
+    padding-bottom: 120px;
     gap: 8px;
-    overflow: hidden;
+    overflow: auto;
+    box-sizing: border-box;
+
+    @media screen and (max-width: 1200px){
+        overflow: auto;
+        padding-bottom: 120px;
+    }
 
     @media screen and (max-width: 600px){
         padding: $space4;
+        padding-bottom: 120px;
+        overflow: auto;
   
      }
 
