--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -109,6 +109,19 @@
   line-height: 32px;
   font-size: 22px;
 }
+.h1{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 120px;
+  font-size: 95px;
+}
+
+.h1-strong{
+    font-family: "Titillium Web", sans-serif ;
+    font-weight: 700;
+    line-height: 120px;
+    font-size: 95px;
+}
 
 .h6{
   font-family: "Titillium Web", sans-serif ;
