--- a/src/style.scss
+++ b/src/style.scss
@@ -34,7 +34,8 @@
 
 
 .main-container{
-   width: 100%;
+    width: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -44,27 +45,22 @@
 
 .content-container{
     max-width: 1400px;  
-    
- height: 100vh;
     padding: $space6;
-    display: flex;
-    flex-direction: column;
     width: 100%;
     justify-content: space-between;
     padding-bottom: 120px;
-    gap: 8px;
-    overflow: auto;
+    overflow: hidden;
     box-sizing: border-box;
 
     @media screen and (max-width: 1200px){
-        overflow: auto;
-        padding-bottom: 120px;
+
+        padding-bottom: 320px;
     }
 
     @media screen and (max-width: 600px){
         padding: $space4;
-        padding-bottom: 120px;
-        overflow: auto;
+        padding-bottom: 320px;
+
   
      }
 
