--- a/src/Page/Icons/Icons.scss
+++ b/src/Page/Icons/Icons.scss
@@ -14,6 +14,11 @@
     align-items: center;
     height: 100vh;
     overflow: hidden;
+
+    @media screen and (max-width: 780px){
+        flex-direction: column;
+        
+        }
 } 
 
 .item
