--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -123,6 +123,21 @@
     font-size: 95px;
 }
 
+.h4{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 72px;
+  font-size: 49px;
+}
+
+.h4-strong{
+    font-family: "Titillium Web", sans-serif ;
+    font-weight: 700;
+    line-height: 72px;
+    font-size: 49px;
+}
+
+
 .h6{
   font-family: "Titillium Web", sans-serif ;
   font-weight: 400;
