--- a/src/base/type-style.scss
+++ b/src/base/type-style.scss
@@ -122,6 +122,19 @@
     line-height: 120px;
     font-size: 95px;
 }
+.h4{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 400;
+  line-height: 72px;
+  font-size: 49px;
+}
+
+.h4-strong{
+    font-family: "Titillium Web", sans-serif ;
+    font-weight: 700;
+    line-height: 72px;
+    font-size: 49px;
+}
 
 .h6{
   font-family: "Titillium Web", sans-serif ;
