--- a/src/Page/Icons/Icons.scss
+++ b/src/Page/Icons/Icons.scss
@@ -39,11 +39,37 @@
     padding: $space4;
     border: 1px solid $neutral-border-7-default;
     border-radius: $radius2;
-    gap: $space3;
+    gap: $space4;
     align-items: center;
 
-    div{
-        width: 100%;
+}
+.modal-item-icon{
+    height: 48px;
+    width: 48px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $neutral-bg-3-default;
+    padding: 12px;
+    box-sizing: border-box;
+    border-radius: 12px;
+
+    img{
+        height: 100%;
     }
 
+    
+}
+.box-wrapper{
+    gap: 8px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-grow: 1;
+}
+.title-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
